--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
         <item>Biz</item>
         <item>Deck</item>
     </array>
+    <string name="title_activity_logout">LogoutActivity</string>
 </resources>
